# phantomLink

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  config.json  conftest.py  data.sh  init.sh  noxfile.py  package-lock.json  package.json  pyproject.toml  pyproject.toml.clean  requirements.txt  scan_results.jsonl  scan_results.txt  target_domains.txt
.github/: CODEOWNERS  dependabot.yml
blutter_results/: api_endpoints.txt
cloud/: docker-compose.yml  package.json  render.yaml
ghost_auth/: creds.json
ghostlink/: cleaner.py  core.py  engager.py  exploit.py  intel_sink.py  number_gen.py
hf-deploy/: Dockerfile  ghost_session.cjs
jadx_results/: findings.txt
logs/: op_20260511_113004_20260511_112117.enc  op_20260511_115507_20260511_115214.enc  op_20260512_103322_20260512_102811.enc  op_20260512_104233_20260512_104137.enc  op_20260512_162857_20260512_162427.enc  op_20260512_163115_20260512_163007.enc  op_20260512_164708_20260512_164419.enc
node_scripts/: baileys_bridge.js  fake_whatsapp.cjs  ghost_bridge.cjs  ghost_engine.cjs  ghost_whatsapp.cjs  ghost_wrapper.sh  pair_ghost.cjs  qr_ghost.cjs  register_ghost.cjs  silent_intercept.cjs
phantom/: __init__.py  attribution.py  behavior.py  cleanse.py  cli.py  core.py  deadswitch.py  dossier.py  download_opensource.sh  engager.py  exploit.py  financial.py  fingerprint.py  fleet.py  gapi_spoof.py  ghost_launch.py  intel_sink.py  interact_newstep.py  interactive.py  interactive.py.bak  intercept.cjs  ioc_extractor.py  js_analyzer.py  live_engage.py  live_exploit.py  live_fire.py  live_preflight.py  logging_config.py  number_gen.py  number_pipeline.py  number_pipeline_v2.py  panic_wipe.py  platforms.py  pre_validator.py  preflight.py  proxy.py  recon.py  recon_adv.py  resilience.py  retry_engine.py  (+7 more)
phantomlink-gateway/: Dockerfile
phantomlink.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
proot-scripts/: fast-apt.sh  intercept-connect.cjs  intercept.cjs  setup-alpine.sh  setup-chrome-headless.sh
render-deploy/: Dockerfile  server.cjs
test_interception/: ghost_interceptor.cjs  spam_sender.cjs
tests/: __init__.py  conftest.py  test_cli.py  test_exploit.py  test_number_gen.py  test_platforms.py
(+2376 files in other folders)
