[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phantomlink"
version = "1.0.0"
description = "PhantomLink — Operational toolkit for security research and knowledge verification"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "PhantomLink Research"}]
keywords = ["security", "research", "whatsapp", "anti-fraud", "osint"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Android",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

dependencies = [
    "rich>=13.0.0",
    "httpx>=0.28.0",
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.3.0",
    "cryptography>=44.0.0",
    "curl-cffi>=0.15.0",
    "fake-useragent>=2.0.0",
    "python-dotenv>=1.0.0",
    "luhnpy>=0.1.0",
    "websockets>=14.0.0",
    "aiohttp>=3.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
    "nox>=2024",
]
browser = [
    "zendriver>=0.1.0",
    "zendriver-captcha>=0.1.0",
]
tor = [
    "PySocks>=1.7.1",
    "stem>=1.8.0",
]

[project.scripts]
phantomlink = "phantom.cli:main"

[project.urls]
Homepage = "https://github.com/chart9195-cyber/PhantomLink"
Repository = "https://github.com/chart9195-cyber/PhantomLink.git"
Issues = "https://github.com/chart9195-cyber/PhantomLink/issues"

[tool.setuptools]
packages = ["phantom"]

[tool.setuptools.package-dir]
"phantom" = "phantom"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[tool.coverage.run]
source = ["phantom"]
omit = ["tests/*", "*/node_scripts/*"]
